# kale

./: Cargo.toml  README.md
src/: event.rs  main.rs  read.rs  tui.rs
src/calendar/: entry.rs  mod.rs
src/tui/: entries.rs  entry_table.rs  events.rs  mod.rs  status_bar.rs
