[package]
name = "cal"
version = "0.1.0"
authors = ["Rafael Epplée <hello@rafa.ee>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
chrono-tz = "0.5.3"
home = "0.5.3"
ical = "0.7.0"
tui = "0.15.0"
